--- a/WhitworthMap/WhitworthMap/packages.config
+++ b/WhitworthMap/WhitworthMap/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="win" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="win" />
   <package id="WindowsAzure.MobileServices" version="1.1.2" targetFramework="win" />
+  <package id="WinRTXamlToolkit" version="1.5.4.3" targetFramework="win" />
 </packages>
