--- a/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
+++ b/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
@@ -128,6 +128,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\3266513.jpg" />
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
