Back button added

--- a/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
+++ b/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
@@ -132,6 +132,9 @@
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\Back.png" />
+    <Content Include="Assets\Fullscreen.png" />
+    <Content Include="Assets\Smallscreen.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
