--- a/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
+++ b/WhitworthMap/WhitworthMapWP8/WhitworthMapWP8.csproj
@@ -135,13 +135,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\3266513.jpg" />
     <Content Include="Assets\AlignmentGrid.png" />
     <Content Include="Assets\ApplicationIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Back.png" />
     <Content Include="Assets\Fullscreen.png" />
+    <Content Include="Assets\Location.png" />
     <Content Include="Assets\Smallscreen.png" />
     <Content Include="Assets\Tiles\FlipCycleTileLarge.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
